tests/c_headers/net_if.h


struct net_if_addr {
	struct net_addr address;
#if defined(CONFIG_NET_NATIVE_IPV6)
	struct net_timeout lifetime;
#endif
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t dad_node;
	uint32_t dad_start;
#endif
	enum net_addr_type addr_type;
	enum net_addr_state addr_state;
#if defined(CONFIG_NET_IPV6_DAD) && defined(CONFIG_NET_NATIVE_IPV6)
	uint8_t dad_count;
#endif
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t is_mesh_local : 1;
	uint8_t _unused : 5;
};
struct net_if_mcast_addr {
	struct net_addr address;
	uint8_t is_used : 1;
	uint8_t is_joined : 1;
	uint8_t _unused : 6;
};
struct net_if_ipv6_prefix {
	struct net_timeout lifetime;
	struct in6_addr prefix;
	struct net_if *iface;
	uint8_t len;
	uint8_t is_infinite : 1;
	uint8_t is_used : 1;
	uint8_t _unused : 6;
};
struct net_if_router {
	sys_snode_t node;
	struct net_addr address;
	struct net_if *iface;
	uint32_t life_start;
	uint16_t lifetime;
	uint8_t is_used : 1;
	uint8_t is_default : 1;
	uint8_t is_infinite : 1;
	uint8_t _unused : 5;
};
struct net_if_ipv6 {
	struct net_if_addr unicast[NET_IF_MAX_IPV6_ADDR];
	struct net_if_mcast_addr mcast[NET_IF_MAX_IPV6_MADDR];
	struct net_if_ipv6_prefix prefix[NET_IF_MAX_IPV6_PREFIX];
	uint32_t base_reachable_time;
	uint32_t reachable_time;
	uint32_t retrans_timer;
#if defined(CONFIG_NET_IPV6_ND) && defined(CONFIG_NET_NATIVE_IPV6)
	sys_snode_t rs_node;
	uint32_t rs_start;
	uint8_t rs_count;
#endif
	uint8_t hop_limit;
};
struct net_if_ipv4 {
	struct net_if_addr unicast[NET_IF_MAX_IPV4_ADDR];
	struct net_if_mcast_addr mcast[NET_IF_MAX_IPV4_MADDR];
	struct in_addr gw;
	struct in_addr netmask;
	uint8_t ttl;
};
struct net_if_config {
	struct net_if_ip ip;
#if defined(CONFIG_NET_DHCPV4) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_dhcpv4 dhcpv4;
#endif 
#if defined(CONFIG_NET_IPV4_AUTO) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4_autoconf ipv4auto;
#endif 
#if defined(CONFIG_NET_L2_VIRTUAL)
	sys_slist_t virtual_interfaces;
#endif 
};
struct net_if_dev {
	const struct device *dev;
	const struct net_l2 * const l2;
	void *l2_data;
	struct net_linkaddr link_addr;
#if defined(CONFIG_NET_OFFLOAD)
	struct net_offload *offload;
#endif 
	uint16_t mtu;
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	bool offloaded;
#endif 
};
struct net_if {
	struct net_if_dev *if_dev;
#if defined(CONFIG_NET_STATISTICS_PER_INTERFACE)
	struct net_stats stats;
#endif 
	struct net_if_config config;
#if defined(CONFIG_NET_POWER_MANAGEMENT)
	int tx_pending;
#endif
};
struct net_if_router *net_if_ipv6_router_add(struct net_if *iface,
					     struct in6_addr *addr,
					     uint16_t router_lifetime);
bool net_if_ipv6_router_rm(struct net_if_router *router);
uint8_t net_if_ipv6_get_hop_limit(struct net_if *iface);
void net_ipv6_set_hop_limit(struct net_if *iface, uint8_t hop_limit);
static inline void net_if_ipv6_set_base_reachable_time(struct net_if *iface,
						       uint32_t reachable_time)
{
#if defined(CONFIG_NET_NATIVE_IPV6)
	if (!iface->config.ip.ipv6) {
		return;
	}
	iface->config.ip.ipv6->base_reachable_time = reachable_time;
#endif
}
static inline uint32_t net_if_ipv6_get_reachable_time(struct net_if *iface)
{
#if defined(CONFIG_NET_NATIVE_IPV6)
	if (!iface->config.ip.ipv6) {
		return 0;
	}
	return iface->config.ip.ipv6->reachable_time;
#else
	return 0;
#endif
}
uint32_t net_if_ipv6_calc_reachable_time(struct net_if_ipv6 *ipv6);
static inline void net_if_ipv6_set_reachable_time(struct net_if_ipv6 *ipv6)
{
#if defined(CONFIG_NET_NATIVE_IPV6)
	ipv6->reachable_time = net_if_ipv6_calc_reachable_time(ipv6);
#endif
}
static inline void net_if_ipv6_set_retrans_timer(struct net_if *iface,
						 uint32_t retrans_timer)
{
#if defined(CONFIG_NET_NATIVE_IPV6)
	if (!iface->config.ip.ipv6) {
		return;
	}
	iface->config.ip.ipv6->retrans_timer = retrans_timer;
#endif
}
static inline uint32_t net_if_ipv6_get_retrans_timer(struct net_if *iface)
{
#if defined(CONFIG_NET_NATIVE_IPV6)
	if (!iface->config.ip.ipv6) {
		return 0;
	}
	return iface->config.ip.ipv6->retrans_timer;
#else
	return 0;
#endif
}
const struct in6_addr *net_if_ipv6_select_src_addr(struct net_if *iface,
						   const struct in6_addr *dst);
static inline const struct in6_addr *net_if_ipv6_select_src_addr(
	struct net_if *iface, const struct in6_addr *dst)
{
	ARG_UNUSED(iface);
	ARG_UNUSED(dst);
	return NULL;
}
struct net_if *net_if_ipv6_select_src_iface(const struct in6_addr *dst);
static inline struct net_if *net_if_ipv6_select_src_iface(
	const struct in6_addr *dst)
{
	ARG_UNUSED(dst);
	return NULL;
}
struct in6_addr *net_if_ipv6_get_ll(struct net_if *iface,
				    enum net_addr_state addr_state);
struct in6_addr *net_if_ipv6_get_ll_addr(enum net_addr_state state,
					 struct net_if **iface);
void net_if_ipv6_dad_failed(struct net_if *iface, const struct in6_addr *addr);
struct in6_addr *net_if_ipv6_get_global_addr(enum net_addr_state state,
					     struct net_if **iface);
int net_if_config_ipv4_get(struct net_if *iface,
			   struct net_if_ipv4 **ipv4);
int net_if_config_ipv4_put(struct net_if *iface);
uint8_t net_if_ipv4_get_ttl(struct net_if *iface);
void net_if_ipv4_set_ttl(struct net_if *iface, uint8_t ttl);
struct net_if_addr *net_if_ipv4_addr_lookup(const struct in_addr *addr,
					    struct net_if **iface);
struct net_if_addr *net_if_ipv4_addr_add(struct net_if *iface,
					 struct in_addr *addr,
					 enum net_addr_type addr_type,
					 uint32_t vlifetime);
bool net_if_ipv4_addr_rm(struct net_if *iface, const struct in_addr *addr);
__syscall int net_if_ipv4_addr_lookup_by_index(const struct in_addr *addr);
__syscall bool net_if_ipv4_addr_add_by_index(int index,
					     struct in_addr *addr,
					     enum net_addr_type addr_type,
					     uint32_t vlifetime);
__syscall bool net_if_ipv4_addr_rm_by_index(int index,
					    const struct in_addr *addr);
struct net_if_mcast_addr *net_if_ipv4_maddr_add(struct net_if *iface,
						const struct in_addr *addr);
bool net_if_ipv4_maddr_rm(struct net_if *iface, const struct in_addr *addr);
struct net_if_mcast_addr *net_if_ipv4_maddr_lookup(const struct in_addr *addr,
						   struct net_if **iface);
void net_if_ipv4_maddr_join(struct net_if_mcast_addr *addr);
static inline bool net_if_ipv4_maddr_is_joined(struct net_if_mcast_addr *addr)
{
	NET_ASSERT(addr);
	return addr->is_joined;
}
void net_if_ipv4_maddr_leave(struct net_if_mcast_addr *addr);
static inline struct in_addr *net_if_router_ipv4(struct net_if_router *router)
{
	return &router->address.in_addr;
}
static inline struct in_addr *net_if_router_ipv4(struct net_if_router *router)
{
	static struct in_addr addr;
	ARG_UNUSED(router);
	return &addr;
}