src/zephyr_c/net/znet_if.nim


## *
##  @brief Add IPv6 router to the system.
##
##  @param iface Network interface
##  @param addr IPv6 address
##  @param router_lifetime Lifetime of the router
##
##  @return Pointer to router information, NULL if could not be added
##

proc net_if_ipv6_router_add*(iface: ptr net_if; caddr: ptr In6Addr;
                            router_lifetime: uint16): ptr net_if_router {.
    importc: "net_if_ipv6_router_add", header: hdr.}


## *
##  @brief Remove IPv6 router from the system.
##
##  @param router Router information.
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv6_router_rm*(router: ptr net_if_router): bool {.
    importc: "net_if_ipv6_router_rm", header: hdr.}


## *
##  @brief Get IPv6 hop limit specified for a given interface. This is the
##  default value but can be overridden by the user.
##
##  @param iface Network interface
##
##  @return Hop limit
##

proc net_if_ipv6_get_hop_limit*(iface: ptr net_if): uint8 {.
    importc: "net_if_ipv6_get_hop_limit", header: hdr.}


## *
##  @brief Set the default IPv6 hop limit of a given interface.
##
##  @param iface Network interface
##  @param hop_limit New hop limit
##

proc net_ipv6_set_hop_limit*(iface: ptr net_if; hop_limit: uint8) {.
    importc: "net_ipv6_set_hop_limit", header: hdr.}


## *
##  @brief Set IPv6 reachable time for a given interface
##
##  @param iface Network interface
##  @param reachable_time New reachable time
##

proc net_if_ipv6_set_base_reachable_time*(iface: ptr net_if; reachable_time: uint32) {.
    inline.} =
  when CONFIG_NET_NATIVE_IPV6:
    if not iface.config.ip.ipv6:
      return
    iface.config.ip.ipv6.base_reachable_time = reachable_time



## *
##  @brief Get IPv6 reachable timeout specified for a given interface
##
##  @param iface Network interface
##
##  @return Reachable timeout
##

proc net_if_ipv6_get_reachable_time*(iface: ptr net_if): uint32 {.importc: "$1", header: hdr.}



## *
##  @brief Calculate next reachable time value for IPv6 reachable time
##
##  @param ipv6 IPv6 address configuration
##
##  @return Reachable time
##

proc net_if_ipv6_calc_reachable_time*(ipv6: ptr net_if_ipv6): uint32 {.
    importc: "net_if_ipv6_calc_reachable_time", header: hdr.}


## *
##  @brief Set IPv6 reachable time for a given interface. This requires
##  that base reachable time is set for the interface.
##
##  @param ipv6 IPv6 address configuration
##

proc net_if_ipv6_set_reachable_time*(ipv6: ptr net_if_ipv6) {.importc: "$1", header: hdr.}



## *
##  @brief Set IPv6 retransmit timer for a given interface
##
##  @param iface Network interface
##  @param retrans_timer New retransmit timer
##

proc net_if_ipv6_set_retrans_timer*(iface: ptr net_if; retrans_timer: uint32) {.importc: "$1", header: hdr.}



## *
##  @brief Get IPv6 retransmit timer specified for a given interface
##
##  @param iface Network interface
##
##  @return Retransmit timer
##

proc net_if_ipv6_get_retrans_timer*(iface: ptr net_if): uint32 {.importc: "$1", header: hdr.}



## *
##  @brief Get a IPv6 source address that should be used when sending
##  network data to destination.
##
##  @param iface Interface that was used when packet was received.
##  If the interface is not known, then NULL can be given.
##  @param dst IPv6 destination address
##
##  @return Pointer to IPv6 address to use, NULL if no IPv6 address
##  could be found.
##

proc net_if_ipv6_select_src_addr*(iface: ptr net_if; dst: ptr In6Addr): ptr In6Addr {.
      importc: "net_if_ipv6_select_src_addr", header: hdr.}



## *
##  @brief Get a network interface that should be used when sending
##  IPv6 network data to destination.
##
##  @param dst IPv6 destination address
##
##  @return Pointer to network interface to use, NULL if no suitable interface
##  could be found.
##

proc net_if_ipv6_select_src_iface*(dst: ptr In6Addr): ptr net_if {.
    importc: "net_if_ipv6_select_src_iface", header: hdr.}



## *
##  @brief Get a IPv6 link local address in a given state.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr_state IPv6 address state (preferred, tentative, deprecated)
##
##  @return Pointer to link local IPv6 address, NULL if no proper IPv6 address
##  could be found.
##

proc net_if_ipv6_get_ll*(iface: ptr net_if; addr_state: net_addr_state): ptr In6Addr {.
    importc: "net_if_ipv6_get_ll", header: hdr.}


## *
##  @brief Return link local IPv6 address from the first interface that has
##  a link local address matching give state.
##
##  @param state IPv6 address state (ANY, TENTATIVE, PREFERRED, DEPRECATED)
##  @param iface Pointer to interface is returned
##
##  @return Pointer to IPv6 address, NULL if not found.
##

proc net_if_ipv6_get_ll_addr*(state: net_addr_state; iface: ptr ptr net_if): ptr In6Addr {.
    importc: "net_if_ipv6_get_ll_addr", header: hdr.}


## *
##  @brief Stop IPv6 Duplicate Address Detection (DAD) procedure if
##  we find out that our IPv6 address is already in use.
##
##  @param iface Interface where the DAD was running.
##  @param addr IPv6 address that failed DAD
##

proc net_if_ipv6_dad_failed*(iface: ptr net_if; caddr: ptr In6Addr) {.
    importc: "net_if_ipv6_dad_failed", header: hdr.}


## *
##  @brief Return global IPv6 address from the first interface that has
##  a global IPv6 address matching the given state.
##
##  @param state IPv6 address state (ANY, TENTATIVE, PREFERRED, DEPRECATED)
##  @param iface Caller can give an interface to check. If iface is set to NULL,
##  then all the interfaces are checked. Pointer to interface where the IPv6
##  address is defined is returned to the caller.
##
##  @return Pointer to IPv6 address, NULL if not found.
##

proc net_if_ipv6_get_global_addr*(state: net_addr_state; iface: ptr ptr net_if): ptr In6Addr {.
    importc: "net_if_ipv6_get_global_addr", header: hdr.}


## *
##  @brief Allocate network interface IPv4 config.
##
##  @details This function will allocate new IPv4 config.
##
##  @param iface Interface to use.
##  @param ipv4 Pointer to allocated IPv4 struct is returned to caller.
##
##  @return 0 if ok, <0 if error
##

proc net_if_config_ipv4_get*(iface: ptr net_if; ipv4: ptr ptr net_if_ipv4): cint {.
    importc: "net_if_config_ipv4_get", header: hdr.}


## *
##  @brief Release network interface IPv4 config.
##
##  @param iface Interface to use.
##
##  @return 0 if ok, <0 if error
##

proc net_if_config_ipv4_put*(iface: ptr net_if): cint {.
    importc: "net_if_config_ipv4_put", header: hdr.}


## *
##  @brief Get IPv4 time-to-live value specified for a given interface
##
##  @param iface Network interface
##
##  @return Time-to-live
##

proc net_if_ipv4_get_ttl*(iface: ptr net_if): uint8 {.importc: "net_if_ipv4_get_ttl",
    header: hdr.}


## *
##  @brief Set IPv4 time-to-live value specified to a given interface
##
##  @param iface Network interface
##  @param ttl Time-to-live value
##

proc net_if_ipv4_set_ttl*(iface: ptr net_if; ttl: uint8) {.
    importc: "net_if_ipv4_set_ttl", header: hdr.}


## *
##  @brief Check if this IPv4 address belongs to one of the interfaces.
##
##  @param addr IPv4 address
##  @param iface Interface is returned
##
##  @return Pointer to interface address, NULL if not found.
##

proc net_if_ipv4_addr_lookup*(caddr: ptr InAddr; iface: ptr ptr net_if): ptr net_if_addr {.
    importc: "net_if_ipv4_addr_lookup", header: hdr.}



## *
##  @brief Add a IPv4 address to an interface
##
##  @param iface Network interface
##  @param addr IPv4 address
##  @param addr_type IPv4 address type
##  @param vlifetime Validity time for this address
##
##  @return Pointer to interface address, NULL if cannot be added
##

proc net_if_ipv4_addr_add*(iface: ptr net_if; caddr: ptr InAddr;
                          addr_type: net_addr_type; vlifetime: uint32): ptr net_if_addr {.
    importc: "net_if_ipv4_addr_add", header: hdr.}



## *
##  @brief Remove a IPv4 address from an interface
##
##  @param iface Network interface
##  @param addr IPv4 address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv4_addr_rm*(iface: ptr net_if; caddr: ptr InAddr): bool {.
    importc: "net_if_ipv4_addr_rm", header: hdr.}



## *
##  @brief Check if this IPv4 address belongs to one of the interface indices.
##
##  @param addr IPv4 address
##
##  @return >0 if address was found in given network interface index,
##  all other values mean address was not found
##

proc net_if_ipv4_addr_lookup_by_index*(caddr: ptr InAddr): cint {.syscall,
    importc: "net_if_ipv4_addr_lookup_by_index", header: hdr.}



## *
##  @brief Add a IPv4 address to an interface by network interface index
##
##  @param index Network interface index
##  @param addr IPv4 address
##  @param addr_type IPv4 address type
##  @param vlifetime Validity time for this address
##
##  @return True if ok, false if the address could not be added
##

proc net_if_ipv4_addr_add_by_index*(index: cint; caddr: ptr InAddr;
                                   addr_type: net_addr_type; vlifetime: uint32): bool {.
    syscall, importc: "net_if_ipv4_addr_add_by_index", header: hdr.}



## *
##  @brief Remove a IPv4 address from an interface by interface index
##
##  @param index Network interface index
##  @param addr IPv4 address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv4_addr_rm_by_index*(index: cint; caddr: ptr InAddr): bool {.syscall,
    importc: "net_if_ipv4_addr_rm_by_index", header: hdr.}



## *
##  @brief Add a IPv4 multicast address to an interface
##
##  @param iface Network interface
##  @param addr IPv4 multicast address
##
##  @return Pointer to interface multicast address, NULL if cannot be added
##

proc net_if_ipv4_maddr_add*(iface: ptr net_if; caddr: ptr InAddr): ptr net_if_mcast_addr {.
    importc: "net_if_ipv4_maddr_add", header: hdr.}


## *
##  @brief Remove an IPv4 multicast address from an interface
##
##  @param iface Network interface
##  @param addr IPv4 multicast address
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv4_maddr_rm*(iface: ptr net_if; caddr: ptr InAddr): bool {.
    importc: "net_if_ipv4_maddr_rm", header: hdr.}


## *
##  @brief Check if this IPv4 multicast address belongs to a specific interface
##  or one of the interfaces.
##
##  @param addr IPv4 address
##  @param iface If *iface is null, then pointer to interface is returned,
##  otherwise the *iface value needs to be matched.
##
##  @return Pointer to interface multicast address, NULL if not found.
##

proc net_if_ipv4_maddr_lookup*(caddr: ptr InAddr; iface: ptr ptr net_if): ptr net_if_mcast_addr {.
    importc: "net_if_ipv4_maddr_lookup", header: hdr.}


## *
##  @brief Mark a given multicast address to be joined.
##
##  @param addr IPv4 multicast address
##

proc net_if_ipv4_maddr_join*(caddr: ptr net_if_mcast_addr) {.
    importc: "net_if_ipv4_maddr_join", header: hdr.}


## *
##  @brief Check if given multicast address is joined or not.
##
##  @param addr IPv4 multicast address
##
##  @return True if address is joined, False otherwise.
##

proc net_if_ipv4_maddr_is_joined*(caddr: ptr net_if_mcast_addr): bool {.importc: "$1", header: hdr.}


## *
##  @brief Mark a given multicast address to be left.
##
##  @param addr IPv4 multicast address
##

proc net_if_ipv4_maddr_leave*(caddr: ptr net_if_mcast_addr) {.
    importc: "net_if_ipv4_maddr_leave", header: hdr.}


## *
##  @brief Get the IPv4 address of the given router
##  @param router a network router
##
##  @return pointer to the IPv4 address, or NULL if none
##

proc net_if_router_ipv4*(router: ptr net_if_router): ptr InAddr {.importc: "$1", header: hdr.}



## *
##  @brief Check if IPv4 address is one of the routers configured
##  in the system.
##
##  @param iface Network interface
##  @param addr IPv4 address
##
##  @return Pointer to router information, NULL if cannot be found
##
